Added Exceptions, Blueprints and Resources Factories, follow/unfollow and block/unblock endpoints
